--- a/schoolapp/src/App.css
+++ b/schoolapp/src/App.css
@@ -1,43 +1,24 @@
+
+
+
+
 .App {
-  text-align: center;
+  display: flax;
+  flex-flow: row wrap;
+  align-items:center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-header {
-  display: inline-flex;
-  padding: 50px
+.App input {
+  vertical-align: middle;
+  margin: 5px 10px 5px 20px;
+  padding: 2px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  width: 12%;
 }
 
 table {
+  margin-left:10px;
   font-family: Arial, sans-serif;
   border-collapse: collapse;
   width: 40%;
@@ -46,3 +27,4 @@ td, th {
   border: 1px solid #cccccc;
   padding: 8px;
 }
+
